--- a/report/pers_schedule/mainmatter/introduction.tex
+++ b/report/pers_schedule/mainmatter/introduction.tex
@@ -12,6 +12,6 @@ Non compliance reduces the effectiveness of AS programs, as progression may get 
 
 To detect Gleason reclassification, in this work we have proposed alternative biopsy schedules, belonging to a class of schedules called personalized schedules. Personalized schedules are tailored separately for every patient and every disease. A simple example is the PRIAS schedule, which is personalized since it depends on the PSA-DT of the patient, an indicator of the health. More sophisticated personalized schedules have been developed in the past. For e.g. \cite{bebu2017OptimalScreening} have proposed Markov models based cost optimized personalized schedules. \cite{oMahonyOptimaInterval} have proposed cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models. \cite{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. \cite{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal markers using joint models for time to event and longitudinal data\citep{tsiatis2004joint,rizopoulos2012joint}. The personalized schedules we have proposed also utilize joint models and are dynamic. i.e. at a time only one future visit is scheduled, based on all the information gathered up to that point in time. More specifically, we have proposed two types of personalized schedules. One based on expected time of Gleason reclassification of a patient and the second based on the risk of Gleason reclassification. We have also analyzed an approach where the two types of personalized schedules are combined. Both types of schedules not only consider a patient's measurable attributes such as age, but also latent patient to patient variations in health, which cannot be measured directly. Results from previous repeat biopsies of the patient and PSA measurements are also used in the personalized schedules, and so is the population level information about hazard of Gleason reclassification.\\
 
-To this end, in context of the problem at hand, the joint model provides a framework to model the association between PSA measurements and the risk of Gleason reclassification. Secondly, joint models utilize random effects to model this association, and therefore have an inherent subject specific nature. Further they allow modeling the entire longitudinal history of PSA measurements, which is more sophisticated than PSA-DT. The use of PSA measurements in creating a personalized schedule is important because PSA is easy to measure, is cost effective, does not have any side effects, and in PRIAS \cite{bokhorst2015compliance} found that compliance rate for PSA measurements was as high as 91\%. They also showed that there were more men who had a Gleason score greater than 6 as well as PSA-DT less than 3 years compared to men who had Gleason > 6 and PSA-DT larger than 3 years. i.e. Information from PSA could be useful in predicting reclassification. Lastly, as mentioned earlier some patients/doctors did not comply with the biopsy schedule because they considered PSA to be stable. Using the PSA information in a more methodical manner can lead to an even more informative medical decision making process.\\
+To this end, in context of the problem at hand, the joint model provides a framework to model the association between PSA measurements and the risk of Gleason reclassification. Secondly, joint models utilize random effects to model this association, and therefore have an inherent subject specific nature. Further they allow modeling the entire longitudinal history of PSA measurements, which is more sophisticated than PSA-DT. The use of PSA measurements in creating a personalized schedule is important because PSA is easy to measure, is cost effective and does not have any side effects. Secondly, in PRIAS \cite{bokhorst2015compliance} found that compliance rate for PSA measurements was as high as 91\%. They also showed that there were more men who had a Gleason score greater than 6 as well as PSA-DT less than 3 years compared to men who had Gleason > 6 as well as PSA-DT larger than 3 years. i.e. Information from PSA could be useful in predicting reclassification. Lastly, as mentioned earlier some patients/doctors did not comply with the biopsy schedule because they considered PSA to be stable. Using the PSA information in a more methodical manner can lead to an even more informative medical decision making process.\\
 
 The rest of the paper is organized as follows. Section \ref{sec : jm_introduction} covers briefly the joint modeling framework in context of the problem at hand. Section \ref{sec : personalized_scheduling} details the personalized scheduling approaches we have proposed in this paper. In section \ref{sec : pers_schedule_PRIAS} we demonstrate the efficacy of personalized schedules in a real world scenario by employing them for the patients from  the PRIAS study. Lastly, in section \ref{sec: simulation_study}, we present the results from a simulation study we conducted, to compare personalized schedules with the schedule of PRIAS study, as well with the most aggressive biopsy schedule of doing a biopsy every year.
