--- a/report/pers_schedule/references.bib
+++ b/report/pers_schedule/references.bib
@@ -9,6 +9,28 @@
   publisher={Elsevier}
 }
 
+@article{lopez2014optimalcutpoints,
+  title={OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests},
+  author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a Xos{\'e} and Suarez, CC and Sampedro, FG},
+  journal={Journal of Statistical Software},
+  volume={61},
+  number={8},
+  pages={1--36},
+  year={2014},
+  publisher={Foundation for Open Access Statistics}
+}
+
+@article{sokolova2009systematic,
+  title={A systematic analysis of performance measures for classification tasks},
+  author={Sokolova, Marina and Lapalme, Guy},
+  journal={Information Processing \& Management},
+  volume={45},
+  number={4},
+  pages={427--437},
+  year={2009},
+  publisher={Elsevier}
+
+
 @article{oMahonyOptimaInterval,
   title={The Influence of Disease Risk on the Optimal Time Interval between Screens for the Early Detection of Cancer: A Mathematical Approach},
   author={O’Mahony, James F and van Rosmalen, Joost and Mushkudiani, Nino A and Goudsmit, Frans-Willem and Eijkemans, Marinus JC and Heijnsdijk, Eveline AM and Steyerberg, Ewout W and Habbema, J Dik F},
@@ -83,6 +105,17 @@ doi = {10.1093/biostatistics/kxv009},
   publisher={Elsevier}
 }
 
+@article{andrinopoulou2016bayesian,
+  title={Bayesian shrinkage approach for a joint model of longitudinal and survival outcomes assuming different association structures},
+  author={Andrinopoulou, Eleni-Rosalina and Rizopoulos, Dimitris},
+  journal={Statistics in Medicine},
+  volume={35},
+  number={26},
+  pages={4813--4823},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
 @article{keegan2012active,
   title={Active surveillance for prostate cancer compared with immediate treatment},
   author={Keegan, Kirk A and Dall'Era, Marc A and Durbin-Johnson, Blythe and Evans, Christopher P},
@@ -112,6 +145,20 @@ doi = {10.1093/biostatistics/kxv009},
   pages={954--960},
   year={2016},
   publisher={Elsevier}
+}
+
+@book{bergerDecisionTheory,
+  title={Statistical Decision Theory and Bayesian Analysis},
+  author={Berger, James O},
+  year={1985},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{robertBayesianChoice,
+  title={The Bayesian choice: from decision-theoretic foundations to computational implementation},
+  author={Robert, Christian},
+  year={2007},
+  publisher={Springer Science \& Business Media}
 }
 
 @book{rizopoulos2012joint,
